# bayesian-statistics

./: pyproject.toml
chapter2/: exercise13.ipynb
projects/heart_disease/: dataset.csv  eda.ipynb
